Se agrega Configuraciones para Docker y contenedor de MongoDB con Docker Compose

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "clean": "rimraf dist"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
