--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,38 @@ version: "3"
 
 services:
   apigraphql:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: apigraphql
     restart: always
-    build: .
     ports: 
       - "3000:3000"
     links:
       - mongo
     volumes:
-      - .:/usr/src/app
+      - .:/app
+      - node_modules:/app/node_modules
+    networks:
+      - dataPipeline-network
+  
   mongo:
     image: mongo
     container_name: mongodb
     restart: always
     ports: 
       - "27017:27017"
+    volumes:  
+      - dbdata:/data/db
     logging:
         driver: none
+    networks:
+      - dataPipeline-network
+
+networks:
+  dataPipeline-network:
+    driver: bridge
+
+volumes:
+  dbdata:
+  node_modules:  
