--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
-    "graphql-tools": "^8.2.8",
-    "mongoose": "^6.3.0",
-    "rimraf": "^3.0.2"
+    "mongoose": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
