--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,7 @@ services:
       - "27017:27017"
     volumes:  
       - dbdata:/data/db
-    logging:
-        driver: none
+    command: --quiet
     networks:
       - apigraph-network
 
